release: bump version to 0.49.0